commit tree ac17f239ba6fcf2645cbeeb17dd52c3aa495dd24

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="something.jpg" />
+    <img src="something.jpg" alt="something!" />
+    <img src="something.jpg" alt="something!" title="this is something!" />
   </body>
 </html>
+© 2022 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
